samples/_failures_safe/1761130212_087205_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_235daa28.c: In function ‘main’:
./samples/SAFE/__tmp_235daa28.c:167:25: error: missing terminating " character
  167 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_235daa28.c:167:9: error: expected expression at end of input
  167 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_235daa28.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_235daa28.c:167:9: error: expected declaration or statement at end of input
